<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nombre"
            android:layout_marginEnd="15dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_nombre"
            android:inputType="text"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rango_edades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rg_menor12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_menor12" />

        <RadioButton
            android:id="@+id/rg_menor18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_menor18" />

        <RadioButton
            android:id="@+id/rg_mayor18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_mayor18"/>

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_genero"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>