<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".reproductor_de_video">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nombre"
                android:padding="8dp"
                style="@style/Estilo2"/>

            <TextView
                android:id="@+id/text_edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_edad"
                android:textSize="18sp"
                android:padding="8dp"
                style="@style/Estilo2"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imagen_foto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="end"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <SurfaceView
        android:id="@+id/reproductor"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_Retroceder"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/retroceder1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_retroceder"
            android:scaleType="centerInside"
            android:layout_margin="5dp"/>

        <ImageButton
            android:id="@+id/btn_Pausa"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/pausa"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:contentDescription="@string/btn_pausa"
            android:layout_margin="5dp"/>

        <ImageButton
            android:id="@+id/btn_Play"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/play"
            android:contentDescription="@string/bTn_play"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:layout_margin="5dp"/>

        <ImageButton
            android:id="@+id/btn_Detener"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/detener"
            android:contentDescription="@string/btn_detener"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:layout_margin="5dp"/>

        <ImageButton
            android:id="@+id/btn_Adelantar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/adelantar"
            android:contentDescription="@string/btn_adelantar"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_Regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/btn_regresar" />

</LinearLayout>
