<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bienvenida">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/bienvenida"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/btn_registro"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/btn_usuario"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_button"
            android:drawableTop="@drawable/usuario"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_menu"
            android:textSize="25sp"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
